Demopage added, some bugs fixed in the process

--- a/spec/browser-test.html
+++ b/spec/browser-test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Fparse test</title>
-        <script src="../dist/fparser.js"></script>
+        <script src="../dist/fparser-dev.js"></script>
     </head>
     <body>
         <div id="output"></div>
