Corrected some typos

--- a/demopage/public/index.html
+++ b/demopage/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="A JavaScript Formulat Parser - parses mathematical string formulas and evaluates them">
+    <meta name="keywords" content="javascript, formula, parser, mathematical, parser, equation, string formula parser">
+    <meta name="author" content="Alexander Schenkel">
+    <meta name="copyright" content="2021 Alexander Schenkel">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>fparser - Demopage</title>
+    <title>fparser - The Formula Parser - Demopage</title>
   </head>
   <body>
     <noscript>
