Upgrading demopage to vue3/vitejs based build

--- a/demopage/index.html
+++ b/demopage/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="A JavaScript Formulat Parser - parses mathematical string formulas and evaluates them">
     <meta name="keywords" content="javascript, formula, parser, mathematical, parser, equation, string formula parser">
     <meta name="author" content="Alexander Schenkel">
     <meta name="copyright" content="2021 Alexander Schenkel">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>fparser - The Formula Parser - Demopage</title>
   </head>
   <body>
@@ -16,6 +15,6 @@
       <strong>We're sorry but fparser doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
